Task routes put into auth middleware group
