# routes/api.php
@@ -15,14 +15,15 @@ use Illuminate\Support\Facades\Route;
 | is assigned the "api" middleware group. Enjoy building your API!
 |
 */
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
+Route::middleware('auth:sanctum')->group(function () {
+    Route::get('/user', fn (Request $request) => $request->user());
+    Route::prefix('task')->name('task.')->group(callback: function () {
+        Route::get(uri: '/', action: [TaskController::class, 'all'])->name('all');
+        Route::get(uri: '/{task}', action: [TaskController::class, 'view'])->name('view');
+        Route::post(uri: '/', action: [TaskController::class, 'store'])->name('store');
+        Route::put(uri: '/{task}', action: [TaskController::class, 'update'])->name('update');
+        Route::delete(uri: '/{task}', action: [TaskController::class, 'delete'])->name('delete');
+    });
 });
 
-Route::prefix('task')->name('task.')->group(callback: function () {
-    Route::get(uri: '/', action: [TaskController::class, 'all'])->name('all');
-    Route::get(uri: '/{task}', action: [TaskController::class, 'view'])->name('view');
-    Route::post(uri: '/', action: [TaskController::class, 'store'])->name('store');
-    Route::put(uri: '/{task}', action: [TaskController::class, 'update'])->name('update');
-    Route::delete(uri: '/{task}', action: [TaskController::class, 'delete'])->name('delete');
-});
+
