# storage/api-docs/api-docs.json
@@ -221,6 +221,14 @@
                     }
                 }
             }
+        },
+        "securitySchemes": {
+            "sanctum": {
+                "type": "apiKey",
+                "description": "Enter token in format (Bearer <token>)",
+                "name": "Authorization",
+                "in": "header"
+            }
         }
     }
 }
